--- a/Project.Web/wwwroot/Templates/Home/dev-detail.html
+++ b/Project.Web/wwwroot/Templates/Home/dev-detail.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Area de Login</title>
+    <title>Dev-detail</title>
 </head>
 <body>
-    bbbbbbbbbbbbbbbbbb
+    aaaaadafhrfgjtjt
 </body>
 </html>
