--- a/Project.Web/wwwroot/Templates/Home/index.html
+++ b/Project.Web/wwwroot/Templates/Home/index.html
@@ -1,61 +1,57 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title>HOME</title>
-</head>
-<body>
-    <div class="table"
-         ng-init="getDevs()">
-        <div class="row"
-             style="border-bottom:groove">
-            <div class="col-sm-3">
-                Nome
-            </div>
-
-            <div class="col-sm-4">
-                Hobby
-            </div>
-
-            <div class="col-sm-2">
-                Sexo
-            </div>
-
-            <div class="col-sm-2">
-                Idade
-            </div>
-
-            <div class="col-sm-1">
-
-            </div>
+﻿
+<div class="table"
+     ng-init="getDevs()">
+    <div class="row"
+         style="border-bottom:groove">
+        <div class="col-sm-3">
+            Nome
         </div>
 
-        <div class="row"
-             ng-repeat="dev in devs"
-             style="border-bottom:groove">
-            <div class="col-sm-3">
-                {{dev.name}}
-            </div>
+        <div class="col-sm-4">
+            Hobby
+        </div>
 
-            <div class="col-sm-4">
-                {{dev.hobby}}
-            </div>
+        <div class="col-sm-2">
+            Sexo
+        </div>
 
-            <div class="col-sm-2">
-                {{dev.sex}}
-            </div>
+        <div class="col-sm-2">
+            Idade
+        </div>
 
-            <div class="col-sm-2">
-                {{dev.age}}
-            </div>
-
-            <div class="col-sm-1">
-                <button class="btn btn-sm btn-outline-info"
-                        ng-click="details(dev.id)">
-                    <i class="fa fa-eye"></i>
-                </button>
-            </div>
+        <div class="col-sm-1">
+            <button class="btn btn-sm btn-outline-primary"
+                    title="Adicionar desenvolvedor"
+                    ng-click="newDevPage()">
+                <i class="fa fa-plus-square"></i>
+            </button>
         </div>
     </div>
-</body>
-</html>
+
+    <div class="row"
+         ng-repeat="dev in devs"
+         style="margin:5px">
+        <div class="col-sm-3">
+            {{dev.name}}
+        </div>
+
+        <div class="col-sm-4">
+            {{dev.hobby}}
+        </div>
+
+        <div class="col-sm-2">
+            {{dev.sex}}
+        </div>
+
+        <div class="col-sm-2">
+            {{dev.age}}
+        </div>
+
+        <div class="col-sm-1">
+            <button class="btn btn-sm btn-outline-info"
+                    ng-click="details(dev.id)">
+                <i class="fa fa-eye"></i>
+            </button>
+        </div>
+    </div>
+</div>
